--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
-    },
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.16.0",
+    "react-table": "^6.8.6",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-form": "^7.4.2",
+    "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.0.0-beta.2",
+    "rxjs": "^6.2.1",
+    "universal-cookie": "^2.2.0",
+    "universal-rxjs-ajax": "^2.0.0"
+  },
   "scripts": {
     "start": "yarn lint && node scripts/start.js",
     "build": "node scripts/build.js",
@@ -35,7 +50,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "^6.26.0",
-    "bootstrap": "^4.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.4.1",
     "css-loader": "^0.28.11",
@@ -72,5 +86,6 @@
       "env",
       "react-app"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
