--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.6.4",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
+    "react-relay": "^1.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
     "react-table": "^6.8.6",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-form": "^7.4.2",
-    "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-observable": "^1.0.0-beta.2",
-    "rxjs": "^6.2.1",
     "universal-cookie": "^2.2.0",
     "universal-rxjs-ajax": "^2.0.0"
   },
@@ -28,23 +22,33 @@
     "build": "node scripts/build.js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "lint": "tslint -c ./tslint.json './src/**/*.ts*'"
+    "lint": "tslint -c ./tslint.json './src/**/*.ts*'",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-typescript": "^7.0.0-beta.51",
+    "@storybook/addon-actions": "4.0.0-alpha.3",
+    "@storybook/addon-info": "4.0.0-alpha.3",
+    "@storybook/addon-links": "4.0.0-alpha.3",
+    "@storybook/addons": "4.0.0-alpha.3",
+    "@storybook/react": "4.0.0-alpha.3",
     "@types/jest": "^23.1.1",
-    "@types/node": "^10.3.4",
+    "@types/node": "^10.3.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
+    "@types/storybook__react": "^3.0.7",
     "autoprefixer": "^8.6.3",
-    "babel-core": "^6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-relay": "^1.6.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.5.1",
@@ -58,6 +62,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "fs-extra": "^6.0.1",
+    "graphql": "^0.13.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "object-assign": "^4.1.1",
@@ -66,6 +71,7 @@
     "postcss-loader": "^2.1.5",
     "promise": "^8.0.1",
     "react-dev-utils": "^5.0.1",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-error-overlay": "^4.0.0",
     "react-scripts": "^1.1.4",
     "sass-loader": "^7.0.3",
