--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -3,10 +3,10 @@
         "@babel/env",
         "@babel/typescript"
     ],
+        "babelrc": false,
     "plugins": [
         "@babel/proposal-class-properties",
         "@babel/proposal-object-rest-spread",
-        ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }],
-        "relay"
+        ["@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
 }
