--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "rootDir": "src",
+    "rootDirs": ["src","stories"],
     "forceConsistentCasingInFileNames": true,
     "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
@@ -21,7 +21,8 @@
      "strictNullChecks": true,              /* Enable strict null checks. */
      "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
      "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
- 
+     "allowSyntheticDefaultImports": true,
+
      /* Additional Checks */                   
      "noUnusedLocals": true,                /* Report errors on unused locals. */
      "noUnusedParameters": true,            /* Report errors on unused parameters. */
