--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "fs-extra": "^6.0.1",
     "graphql": "^0.13.2",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "node-less": "^1.0.0",
     "object-assign": "^4.1.1",
     "popper.js": "^1.14.3",
     "postcss-flexbugs-fixes": "^3.3.1",
@@ -74,7 +76,6 @@
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-error-overlay": "^4.0.0",
     "react-scripts": "^1.1.4",
-    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-loader": "^4.4.1",
