--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@secoya/relay-compiler-typescript": "^1.0.0",
     "antd": "^3.6.4",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
@@ -10,10 +11,10 @@
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-relay": "^1.6.0",
-    "react-router-dom": "^4.3.1",
+    "react-relay": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/react-relay-1.5.0-plugin.3.tgz",
     "react-scripts-ts": "2.16.0",
     "react-table": "^6.8.6",
+    "relay-runtime": "^1.6.0",
     "universal-cookie": "^2.2.0",
     "universal-rxjs-ajax": "^2.0.0"
   },
@@ -24,7 +25,16 @@
     "eject": "react-scripts-ts eject",
     "lint": "tslint -c ./tslint.json './src/**/*.ts*'",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "relay": "relay-compiler --src ./src/  --schema ./schema.graphql --language typescript --artifactDirectory ./src/__relay_artifacts__"
+  },
+  "resolutions": {
+    "graphql": "^0.13.1",
+    "relay-compiler-language-typescript": "^0.9.0",
+    "relay-compiler": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/relay-compiler-1.5.0-plugin.3.tgz",
+    "relay-runtime": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/relay-runtime-1.5.0-plugin.3.tgz",
+    "babel-plugin-relay": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/babel-plugin-relay-1.5.0-plugin.3.tgz",
+    "react-relay": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/react-relay-1.5.0-plugin.3.tgz"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
@@ -43,12 +53,16 @@
     "@types/node": "^10.3.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
+    "@types/react-relay": "^1.3.6",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/relay-runtime": "^1.3.3",
     "@types/storybook__react": "^3.0.7",
     "autoprefixer": "^8.6.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "babel-loader": "^8.0.0-beta.2",
-    "babel-plugin-relay": "^1.6.0",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-relay": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/babel-plugin-relay-1.5.0-plugin.3.tgz",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.5.1",
@@ -76,6 +90,8 @@
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-error-overlay": "^4.0.0",
     "react-scripts": "^1.1.4",
+    "relay-compiler": "https://github.com/alloy/relay/releases/download/v1.5.0-plugin.3/relay-compiler-1.5.0-plugin.3.tgz",
+    "relay-compiler-language-typescript": "^0.9.0",
     "style-loader": "^0.21.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-loader": "^4.4.1",
@@ -88,14 +104,5 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-manifest-plugin": "^2.0.3",
     "whatwg-fetch": "^2.0.4"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react-app",
-      "@babel/env",
-      "@babel/typescript"
-    ]
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
