--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "build",
     "module": "esnext",
     "target": "es6",   
-    "lib": ["es6", "dom", "es5"],
+    "lib": ["es6", "dom", "es5","es2015"],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
@@ -51,6 +51,7 @@
     "jsx-no-multiline-js": false,
     "member-access": false,
     "no-return-await": false,
+    "jsx-wrap-multiline": false,
     "no-submodule-imports": false,
     "no-trailing-whitespace": false,
     "no-var-requires": false,
