--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,19 @@
 {
+    "passPerPreset": true,
     "presets": [
         "@babel/env",
-        "@babel/typescript"
+        "@babel/typescript",
+        "@babel/react",
+        "@babel/es2015"
     ],
     "plugins": [
         "@babel/proposal-class-properties",
+        ["@babel/plugin-proposal-decorators", {
+            "legacy": true
+          }],
         "@babel/proposal-object-rest-spread",
-        ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }],
-        "relay"
+        ["relay", {"schema":"./schema.graphql"}],
+        "@babel/transform-runtime",
+        "@babel/plugin-proposal-export-default-from"
     ]
 }
