--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,12 +1,19 @@
 {
+    "passPerPreset": true,
     "presets": [
         "@babel/env",
-        "@babel/typescript"
+        "@babel/typescript",
+        "@babel/react",
+        "@babel/es2015"
     ],
-        "babelrc": false,
     "plugins": [
         "@babel/proposal-class-properties",
+        ["@babel/plugin-proposal-decorators", {
+            "legacy": true
+          }],
         "@babel/proposal-object-rest-spread",
-        ["@babel/plugin-proposal-decorators", { "legacy": true }]
+        ["relay", {"schema":"./schema.graphql"}],
+        "@babel/transform-runtime",
+        "@babel/plugin-proposal-export-default-from"
     ]
 }
