--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint": "tslint -c ./tslint.json './src/**/*.ts*'",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "relay": "relay-compiler --src ./src/ --schema ./schema.graphql --language typescript --artifactDirectory ./src/__generated__"
+    "relay": "relay-compiler --src ./src/ --schema ./schema.graphql --language typescript --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
